--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-streamlit==1.37.0
-pandas==2.2.2
+streamlit==1.39.0
+pandas==2.2.3
 fuzzywuzzy==0.18.0
-python-Levenshtein==0.25.1
+python-Levenshtein==0.26.1
 deep-translator==1.11.4
+openai==1.55.3
+httpx==0.27.2
